fix: fixed Dockerfiles

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - /proc:/proc:ro
       - /dev:/dev
       - ../ssh-bot-key:/root/.ssh:ro
-      - /home/finler6/portfolio-site:/home/finler6/portfolio-site:ro
+      - /home/finler6/portfolio-site:/home/finler6/portfolio-site
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
 
